fdo#61193 fix crash on RTF paste of footnote

Regression from 232ad2f2588beff50cb5c1f3b689c581ba317583.

Change-Id: Ia0873851979df5bba0a4693f044aab2aeff2b8e4